--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext {
+        kotlin_version = "1.3.72"
+        constraintlayout_version = "2.0.0"
+        recyclerview_version = "1.1.0"
+        cardview_version = "1.0.0"
+        material_version = "1.2.0"
+        coroutines_android_version = "1.3.8"
+        room_version = "2.3.0-alpha02"
+        koin_version = "2.1.6"
+        lifecycle_version="2.2.0"
+    }
+
     repositories {
         google()
         jcenter()
@@ -8,9 +19,6 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
