--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         room_version = "2.3.0-alpha02"
         koin_version = "2.1.6"
         lifecycle_version="2.2.0"
+        navigation_version="2.3.0"
     }
 
     repositories {
